--- a/Project3/documents/TEK9020_Proj3.tex
+++ b/Project3/documents/TEK9020_Proj3.tex
@@ -294,7 +294,7 @@
 	\section{Konklusjon}
 	Klyngeanalyse brukes ofte i ikke-ledet læring tilfeller der vi har sampler fra flere ukjente klasser i et datasett. Forskjellige klyngemetoder, som KMeans og agglomerativ metode, kan brukes for å tilegne samplene inn i like klynger etter egenskapene til samplene. Disse inndelte klyngene kan brukes til å trene opp f.eks. klassifikatorer utifra klasseinndelingen/klyngene til klyngemetodene.
 	
-	Det originale datasettet er best å bruke, og gir høyere predikert accuracy for de brukte klassifikatorene. Men ofte så er det ikke sikkert at de sanne klassene er tilgjengelige i datasett. Så klyngemetoder, som har blitt brukt her, viser at på Iris datasettet så er det en liten nedgang i hvor nøyaktige klassifikatorene blir, men klyngemetodene viser at det ikke er stor forskjell slik at de fint kan brukes for å tildele ukjente sampler inn i klynger/klasser som er i nærheten av de sanne klassene. Det kan ofte of være ekstra informasjon å få ved å gjøre klyngeanalyse.
+	Det originale datasettet er best å bruke, og gir høyere predikert accuracy for de brukte klassifikatorene. Men ofte så er det ikke sikkert at de sanne klassene er tilgjengelige i datasett. Så klyngemetoder, som har blitt brukt her, viser at på Iris datasettet så er det en liten nedgang i hvor nøyaktige klassifikatorene blir, men klyngemetodene viser at det ikke er stor forskjell slik at de fint kan brukes for å tildele ukjente sampler inn i klynger/klasser som er i nærheten av de sanne klassene. Det kan ofte og være ekstra informasjon å få ved å gjøre klyngeanalyse.
 	
 	
 	\appendix
